Cambios varios de simplificación de código